<resources>
    <string name="app_name">MusicInstrumentLessoner</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">GirlsDay mina</string>
    <string name="nav_header_subtitle">justkukaro@naver.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_name_kor">악기 레스너</string>
    <string name="splash_comment">"Bring the joy \nto your instrument"</string>

    <string name="login_act_forgot_password">FORGOT \nPASSWORD?</string>

    <string name="nav_bar_notification">notification</string>
    <string name="nav_bar_template">template</string>
    <string name="nav_bar_group">group</string>
    <string name="nav_bar_store">store</string>
    <string name="nav_bar_information">information</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seperator">seperator</string>
    <string name="button">Button</string>
    <string name="savingFIleName">저장될 파일이름</string>
    <string name="save">저장</string>
    <string name="stopRecord">녹음 중지</string>
    <string name="startRecord">녹음시작</string>
</resources>
